# fastapi_serviceutils_template

./: README.md  cookiecutter.json
{{cookiecutter.service_name}}/: .pre-commit-config.yaml  .tmuxp.yml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose_devl.yml  docker-compose_prod.yml  docker-compose_stage.yml  pydocmd.yml  pyproject.toml  setup.cfg
{{cookiecutter.service_name}}/app/: __init__.py  config.yml  main.py
{{cookiecutter.service_name}}/app/endpoints/: __init__.py
{{cookiecutter.service_name}}/app/endpoints/v1/: __init__.py  models.py  {{cookiecutter.endpoint}}.py
{{cookiecutter.service_name}}/docs/: conf.py  documentation.rst  getting_started.rst  helpers.rst  index.rst  service_structure.rst  sources.rst
{{cookiecutter.service_name}}/docs/source/: configuration.md  deployment.md  index.html  recommended.md  references.md  subject_specific_documentation.md
{{cookiecutter.service_name}}/docs/source/development/: clean_code.md  dependency_management.md  documentation.md  endpoint_models.md  endpoint_structure.md  getting_started.md  git_workflow.md  running_service.md  testing.md  versioning.md
{{cookiecutter.service_name}}/docs/source/development/helpers/: makefile.md  pre-commit.md  tmuxp.md
{{cookiecutter.service_name}}/tests/: {{cookiecutter.endpoint}}_test.py
